Complete image stuff in README.md